--- a/msyos_YBT.plist
+++ b/msyos_YBT.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://www.msyos.com/msyos_ybt_ent.ipa</string>
+					<string>http://www.msyos.com/msyos_YBT.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
