--- a/msyos_MSYOS_SX.plist
+++ b/msyos_MSYOS_SX.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://sx.msyos.com:60/msyos_MSYOS_SX.ipa</string>
+					<string>http://sx.msyos.com/msyos_MSYOS_SX.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
