--- a/msyos_MSYOS_YZ.plist
+++ b/msyos_MSYOS_YZ.plist
@@ -37,9 +37,9 @@
 					<key>kind</key>
 					<string>software</string>
 					<key>subtitle</key>
-					<string>民生云</string>
+					<string>永州社保通</string>
 					<key>title</key>
-					<string>民生云</string>
+					<string>永州社保通</string>
 				</dict>
 			</dict>
 		</array>
